@@ -1,0 +1,9 @@
+// gemc
+#include "gSensitiveDetector.h"
+
+// this is thread-local
+bool GSensitiveDetector::skipProcessHit(double energy)
+{
+	
+	return false;
+}
