@@ -1,4 +1,3 @@
-add -v option for version then exist --v -V --V --version -version -Version --Version
 
 clock class
 random number class
